2010-11-29  Adam Roben  <aroben@apple.com>

        Touch wtf/Platform.h whenever any .vsprops file changes

        This will cause all files to be recompiled, which will make changes to
        preprocessor macros (e.g., ENABLE_*) actually take effect.

        Fixes <http://webkit.org/b/50167> Windows build fails when ENABLE_*
        macros are changed (because not enough files are rebuilt)

        Reviewed by John Sullivan.

        * JavaScriptCore.vcproj/JavaScriptCore/react-to-vsprops-changes.py:
        (main): Touch wtf/Platform.h if it's older than any .vsprops file. Also
        added some comments and logging to make it clearer what the script is
        doing and why.

2010-11-29  Adam Roben  <aroben@apple.com>

        Update react-to-vsprops-changes.py after r72555

        .vsprops files are no longer accessed relative to $WebKitLibrariesDir.

        Fixes <http://webkit.org/b/50166> REGRESSION (r72555):
        react-to-vsprops-changes.py no longer works for people with a
        non-default $WebKitLibrariesDir

        Reviewed by John Sullivan.

        * JavaScriptCore.vcproj/JavaScriptCore/react-to-vsprops-changes.py:
        (main): Always look in WebKitLibraries/win for .vsprops files, not in
        $WebKitLibrariesDir.

2010-11-28  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Bug 48100 - YARR allows what seems like a bogus character-class range

        Per ECMA-262 character classes containing character ranges containing
        character classes are invalid, eg:
            /[\d-x]/
            /[x-\d]/
            /[\d-\d]/
        These should throw a syntax error.

        * yarr/RegexParser.h:

2010-11-27  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        Bug 48101 - Yarr gives different results for /(?:a*?){2,}/

        The test cases in the linked mozilla bug demostrate a couple of
        problems in subpattern matching. These bugs lie in the optimized