@@ -6,19 +6,15 @@ import re
 import sys
 
 
-def file_modification_times(directory):
-    for dirpath, dirnames, filenames in os.walk(directory):
-        for filename in filenames:
-            yield os.path.getmtime(os.path.join(dirpath, filename))
-
-
 def main():
     # It's a little unfortunate that we're relying on the location of this
     # script to find the top-level source directory.
     top_level_directory = os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__)))))
 
     vsprops_directory = os.path.join(top_level_directory, 'WebKitLibraries', 'win', 'tools', 'vsprops')
-    newest_vsprops_time = max(file_modification_times(vsprops_directory))
+    vsprops_files = glob.glob(os.path.join(vsprops_directory, '*.vsprops'))
+    assert len(vsprops_files), "Couldn't find any .vsprops files in %s" % vsprops_directory
+    newest_vsprops_time = max(map(os.path.getmtime, vsprops_files))
 
     # Delete any manifest-related files because Visual Studio isn't smart
     # enough to figure out that it might need to rebuild them.
